@@ -395,9 +395,6 @@ void WMInitializeApplication(char *applicationName, int *argc, char **argv);
 
 void WMSetResourcePath(char *path);
 
-/* don't free the returned string */
-char* WMGetApplicationName();
-
 /* Try to locate resource file. ext may be NULL */
 char* WMPathForResourceOfType(char *resource, char *ext);
 
