@@ -1,13 +1,0 @@
-
-
-#include "WINGs/WINGsP.h"
-
-extern struct W_Application WMApp;
-
-char*
-WMGetApplicationName()
-{
-    return WMApp.applicationName;
-}
-
-
